--- a/react-table-demo/package.json
+++ b/react-table-demo/package.json
@@ -1,34 +1,14 @@
 {
-  "name": "dentalclinic",
+  "name": "react-table-demo",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@emotion/react": "^11.10.4",
-    "@emotion/styled": "^11.10.4",
-    "@iconscout/react-unicons": "^1.1.6",
-    "@mui/icons-material": "^5.10.3",
-    "@mui/material": "^5.10.5",
-    "@mui/styled-engine-sc": "^5.10.3",
-    "@syncfusion/ej2-react-dropdowns": "^20.2.48",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "bootstrap": "^5.2.1",
-    "bootstrap-icons": "^1.9.1",
-    "load-external-scripts": "^1.4.0",
-    "mdb-react-ui-kit": "^4.2.0",
-    "mdbreact": "^5.2.0",
-    "moment": "^2.29.4",
     "react": "^18.2.0",
-    "react-bootstrap": "^2.5.0",
-    "react-crud-icons": "^1.1.0",
     "react-dom": "^18.2.0",
-    "react-helmet": "^6.1.0",
-    "react-icons": "^4.4.0",
     "react-scripts": "5.0.1",
-    "react-table": "^7.8.0",
-    "recharts": "^2.1.14",
-    "styled-components": "^5.3.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
